--- a/src/classes/LightningSharing.cls
+++ b/src/classes/LightningSharing.cls
@@ -39,8 +39,8 @@ global with sharing class LightningSharing {
 	@AuraEnabled
 	global static string upsertPerm (id UserOrGroupID, id recordId, string level){
 		if (!canIEditPerms(recordId)){
-    	throw new SharingPermsException('Only the record owner or administers can modify permissions');
-  	}
+			throw new SharingPermsException('Only the record owner or administers can modify permissions');
+		}
 		system.debug('doing perm upsert');
 
 		string query = buildQuery(recordId);
@@ -56,8 +56,8 @@ global with sharing class LightningSharing {
 			existing[0].put(getAccessLevelField(sobj), level);
 			update existing;
 			return JSON.serialize(existing);
-		} else {
-			system.debug('not already existing. will create');
+			} else {
+				system.debug('not already existing. will create');
 
 			//create a new SObject dynamically and insert
 			Schema.SObjectType newObj = Schema.getGlobalDescribe().get(getSharingTableName(sobj));
@@ -80,96 +80,107 @@ global with sharing class LightningSharing {
 	}
 
 	@AuraEnabled
-    global static list<SObject> query(String soql) {
-        return Database.query(soql);
-    }
+	global static list<SObject> query(String soql) {
+		return Database.query(soql);
+	}
 
 	@AuraEnabled
-    global static string objectTypeFromId(id recordId){
-        Schema.SObjectType token = recordId.getSObjectType();
-        Schema.DescribeSObjectResult dr = token.getDescribe();
-        return dr.getName();
-    }
+	global static list<SObject> doSOSL(String sosl){
+		list<list<sobject>> results = search.query(sosl);
+		list<sobject> output = new list<sobject>();
+		for (list<sobject> result:results){
+			output.addAll(result);
+		}
+		return output;
+	}
 
-    @AuraEnabled
-    global static string getSharings(id recordId){
-    	if (!canIEditPerms(recordId)){
-    		throw new SharingPermsException('Only the record owner or administers can access permissions');
-    	}
-			list<sobject> results = database.query(buildQuery(recordId));
-			list<sharingHolder> output = new list<sharingHolder>();
 
-			set<id> groupAndUserIDs = new set<id>();
+	@AuraEnabled
+	global static string objectTypeFromId(id recordId){
+		Schema.SObjectType token = recordId.getSObjectType();
+		Schema.DescribeSObjectResult dr = token.getDescribe();
+		return dr.getName();
+	}
 
-			for (sobject so:results){
-				sharingHolder sh = new sharingHolder();
-				sh.RowCause = string.valueOf(so.get('RowCause'));
-				sh.AccessLevel = string.valueOf(so.get(getAccessLevelField(objectTypeFromId(recordId))));
-				sh.UserOrGroupID = string.valueOf(so.get('UserOrGroupID'));
-				groupAndUserIDs.add(sh.UserOrGroupID);
-				output.add(sh);
-			}
+	@AuraEnabled
+	global static string getSharings(id recordId){
+		if (!canIEditPerms(recordId)){
+			throw new SharingPermsException('Only the record owner or administers can access permissions');
+		}
+		list<sobject> results = database.query(buildQuery(recordId));
+		list<sharingHolder> output = new list<sharingHolder>();
 
-			map<id, user> UserMap = new map<id, user>([select Name, UserType from User where id in: groupAndUserIDs]);
-			map<id, group> GroupMap = new map<id, group>([select Name, Type from Group where id in: groupAndUserIDs]);
+		set<id> groupAndUserIDs = new set<id>();
 
-			for (sharingHolder sh:output){
-				if (UserMap.get(sh.UserOrGroupID)!=null){
+		for (sobject so:results){
+			sharingHolder sh = new sharingHolder();
+			sh.RowCause = string.valueOf(so.get('RowCause'));
+			sh.AccessLevel = string.valueOf(so.get(getAccessLevelField(objectTypeFromId(recordId))));
+			sh.UserOrGroupID = string.valueOf(so.get('UserOrGroupID'));
+			groupAndUserIDs.add(sh.UserOrGroupID);
+			output.add(sh);
+		}
+
+		map<id, user> UserMap = new map<id, user>([select Name, UserType from User where id in: groupAndUserIDs]);
+		map<id, group> GroupMap = new map<id, group>([select Name, Type from Group where id in: groupAndUserIDs]);
+
+		for (sharingHolder sh:output){
+			if (UserMap.get(sh.UserOrGroupID)!=null){
 					//it's a user
 					sh.UserOrGroupType = 'User';
 					sh.UserOrGroupName = UserMap.get(sh.UserOrGroupID).Name;
 					sh.SubType = UserMap.get(sh.UserOrGroupID).UserType;
-				} else if (GroupMap.get(sh.UserOrGroupID)!=null){
-					sh.UserOrGroupType = 'Group';
-					sh.SubType = GroupMap.get(sh.UserOrGroupID).Type;
-					sh.UserOrGroupName = GroupMap.get(sh.UserOrGroupID).Name;
+					} else if (GroupMap.get(sh.UserOrGroupID)!=null){
+						sh.UserOrGroupType = 'Group';
+						sh.SubType = GroupMap.get(sh.UserOrGroupID).Type;
+						sh.UserOrGroupName = GroupMap.get(sh.UserOrGroupID).Name;
+					}
 				}
+
+				return JSON.serialize(output);
 			}
 
-			return JSON.serialize(output);
-    }
-
-    private static string buildQuery(id recordId){
-       	string sobj = objectTypeFromId(recordId);
-    	string query = 'select Id, RowCause, UserOrGroupId, ' +getAccessLevelField(sobj)+ ' from ' +getSharingTableName(sobj)+ ' where ' + getLookupField(sobj)+ ' = \'' + recordId + '\'';
-    	system.debug(query);
-    	return query;
-    }
-
-    global class sharingHolder {
-    	global string UserOrGroupName {get;set;}
-    	global string SubType {get;set;}
-    	global string UserOrGroupType {get;set;}
-    	global string UserOrGroupID {get;set;}
-    	global string AccessLevel {get;set;}
-    	global string RowCause {get;set;}
-    }
-
-    private static string getLookupField (string sobj){
-    	if (sobj=='Account' || sobj=='Asset' || sobj=='Campaign' || sobj =='Case' || sobj=='Contact' || sobj=='Lead' || sobj=='Opportunity' || sobj=='User' ){
-			return sobj + 'Id';
-		} else {
-			return 'ParentId';
-		}
-    }
-
-    private static string getAccessLevelField (string sobj){
-    	system.debug('accesslevelField received sobject type :' + sobj);
-    	if (sobj=='Account' || sobj=='Asset' || sobj=='Campaign' || sobj =='Case' || sobj=='Contact' || sobj=='Lead' || sobj=='Opportunity' || sobj=='User' ){
-				system.debug('is a special object');
-				return sobj + 'AccessLevel';
-			} else {
-				system.debug('is not a special object');
-				return 'AccessLevel';
+			private static string buildQuery(id recordId){
+				string sobj = objectTypeFromId(recordId);
+				string query = 'select Id, RowCause, UserOrGroupId, ' +getAccessLevelField(sobj)+ ' from ' +getSharingTableName(sobj)+ ' where ' + getLookupField(sobj)+ ' = \'' + recordId + '\'';
+				system.debug(query);
+				return query;
 			}
-    }
 
-    private static string getSharingTableName (string sobj){
-    	if (sobj.contains('__c')){
-				return sobj.replace('__c','__Share');
-			} else {
-				return sobj+'Share';
+			global class sharingHolder {
+				global string UserOrGroupName {get;set;}
+				global string SubType {get;set;}
+				global string UserOrGroupType {get;set;}
+				global string UserOrGroupID {get;set;}
+				global string AccessLevel {get;set;}
+				global string RowCause {get;set;}
 			}
-    }
 
-}
+			private static string getLookupField (string sobj){
+				if (sobj=='Account' || sobj=='Asset' || sobj=='Campaign' || sobj =='Case' || sobj=='Contact' || sobj=='Lead' || sobj=='Opportunity' || sobj=='User' ){
+					return sobj + 'Id';
+					} else {
+						return 'ParentId';
+					}
+				}
+
+				private static string getAccessLevelField (string sobj){
+					system.debug('accesslevelField received sobject type :' + sobj);
+					if (sobj=='Account' || sobj=='Asset' || sobj=='Campaign' || sobj =='Case' || sobj=='Contact' || sobj=='Lead' || sobj=='Opportunity' || sobj=='User' ){
+						system.debug('is a special object');
+						return sobj + 'AccessLevel';
+						} else {
+							system.debug('is not a special object');
+							return 'AccessLevel';
+						}
+					}
+
+					private static string getSharingTableName (string sobj){
+						if (sobj.contains('__c')){
+							return sobj.replace('__c','__Share');
+							} else {
+								return sobj+'Share';
+							}
+						}
+
+					}
